fix some z-index issue as well as a join channel bug

--- a/react-app/src/components/OneWorkspace/MainContent.js/ChannelModal/ChannelModal.css
+++ b/react-app/src/components/OneWorkspace/MainContent.js/ChannelModal/ChannelModal.css
@@ -1,8 +1,8 @@
 .channel-name-modal {
   display: flex;
   font-size: 10px;
-  position: fixed;
-  top: 45px;
+  margin-right: 10px;
+  width: fit-content;
 }
 
 .channel-name-modal:hover {
